@@ -1,5 +1,11 @@
 2014-11-11  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* ColorPerVertexEditorPreview.x3dv:
+	* ColorPerVertexEditor.h:
+	* ColorPerVertexEditor.cpp: 
+
+2014-11-11  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ColorPerVertexEditor.h:
 	* ColorPerVertexEditor.cpp: 
 
